Entire work done

--- a/cal.html
+++ b/cal.html
@@ -6,12 +6,12 @@
     <body>
         <h1>Percent Calulator</h1>
         <p>X iis what percentage of Y?</p>
-        <form>
-            <input type ="text">is what percent of
-            <input type ="text">?<br><br>
+        <form id="X is What % of Y">
+            <input type ="text" id="numField1">is what percent of
+            <input type ="text" id="numField2">?<br><br>
             <input type="submit" value="Calculate">
         </form>
-        <h3>100%</h3>
+        <h3>Result</h3>
         <script type="text/javascript" src="caljs.js">
     </body>
 </html>
